[package]
name = "puppeteer-builders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"
console_log = "0.2.0"
log = "0.4.14"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.28"
lazy_static = "1.4.0"
gloo-timers = "0.2.1"
arrayvec = "0.7.2"
smallvec = "1.7.0"
nanorand = { version = "0.6.1", default-features = false, features = [
    "wyrand",
] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "DomStringMap",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
